--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </p>
             <p>
               <strong>Script:</strong>
-                Oleksandr Shapiro
+                Ruslan Aritovych
             </p>
             <p>
               <strong>Awards:</strong>
@@ -185,7 +185,7 @@
       <div id="distribution-start"></div>
       <h1 class="section-title">Distribution</h1>
       <hr>
-      <p id="distribution-description">We have released more than 100 films, both wide-release indie and arthouse movies.</p>
+      <p id="distribution-description">We have released more than 100 films, both wide-release indie and arthouse movies. Selected titles:</p>
       <div id="distribution">
         <div class="film-card">
           <div class="poster-wrapper">
