--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <img src="assets/icons/instagram.svg">
           </a>
           <a href="#">
-            <img src="assets/icons/youtube.svg">
+            <img src="assets/icons/vimeo.svg">
           </a>
         </div>
       </div>
