--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="parallax" id="intro">
-        <h1>Film production & distribution company</h1>
+        <!-- <h1>Film production & distribution company</h1> -->
         <div class="overlay">
           <a id="to-projects-from-arrow" class="arrow-container pulse">
             <div class="arrow"></div>
