Added links to main page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <body>
 
       <div class="navbar">
-        <img src="assets/logo.png" class="image-logo">
-        <a href="#" id="logo">PREMIER-MEDIA</a>
+        <a href="https://premiermediafilms.com/">
+          <img src="assets/logo.png" class="image-logo">
+        </a>
+        <a href="https://premiermediafilms.com/" id="logo">PREMIER-MEDIA</a>
 
         <ul class="desktop-menu">
           <li><a class="to-projects">Projects</a></li>
