Removed js smoothscroll

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
         <div id='slide-out'>
           <ul>
-            <li><a class="to-projects">Projects</a></li>
-            <li><a class="to-produced">Produced</a></li>
-            <li><a class="to-distribution">Distribution</a></li>
-            <li><a class="to-about">About</a></li>
-            <li><a class="to-team">Team</a></li>
-            <li><a class="to-contacts">Contacts</a></li>
+            <li><a href="#projects-start">Projects</a></li>
+            <li><a href="#produced-start">Produced</a></li>
+            <li><a href="#distribution-start">Distribution</a></li>
+            <li><a href="#about-start">About</a></li>
+            <li><a href="#team-start">Team</a></li>
+            <li><a href="#contacts-start">Contacts</a></li>
           </ul>
         </div>
 
