Fixed arrow anchor link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="parallax" id="intro">
         <!-- <h1>Film production & distribution company</h1> -->
         <div class="overlay">
-          <a id="to-projects-from-arrow" class="arrow-container pulse">
+          <a href="#projects-start" class="arrow-container pulse">
             <div class="arrow"></div>
             <div class="arrow"></div>
             <div class="arrow"></div>
