--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
@@ -299,48 +300,5 @@
       <div id="footer">
         PREMIER-MEDIA ©2007-2019 All rights reserved.
       </div>
-
-      <script type="text/javascript">
-
-          var sideNav = document.getElementById("slide-out"),
-              sideNavVisible = true;
-
-          var menuButton = document.getElementById("menu")
-
-          function toggleSideNav() {
-            menuButton.classList.toggle('open');
-            if (sideNavVisible) {
-              sideNav.style.cssText = "transform: translateX(0); -webkit-transition: 0.5s;";
-            } else {
-              sideNav.style.cssText = "transform: translateX(-100%); -webkit-transition: 0.5s;";
-            }
-            sideNavVisible = !sideNavVisible;
-          }
-
-          $(document).ready(function(){
-            // Add smooth scrolling to all links
-            $("a").on('click', function(event) {
-
-              // Make sure this.hash has a value before overriding default behavior
-              if (this.hash !== "") {
-                // Prevent default anchor click behavior
-                event.preventDefault();
-
-                // Store hash
-                var hash = this.hash;
-
-                // Using jQuery's animate() method to add smooth page scroll
-                // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-                $('html, body').animate({
-                  scrollTop: $(hash).offset().top
-                }, 800, function(){
-
-                  // Add hash (#) to URL when done scrolling (default click behavior)
-                  window.location.hash = hash;
-                });
-              } // End if
-            });
-          });
-      </script>
   </body>
 <html>
