small style changes

--- a/movie_template.html
+++ b/movie_template.html
@@ -70,8 +70,7 @@
           <div class="description">
             <h2>SEA-OCEAN / МОРЕ-ОКЕАН</h2>
             <h3>2020 / Ukraine / feature / drama</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising. Since 2007 the company is working in the field of independent film production and theatrical distribution of feature, documentary and short films.</p>
 
           </div>
           <!-- <div class="videos"> -->
