Added poster for daddy's room movie

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
         <div class="film-card">
           <div class="poster-wrapper">
+            <img src='assets/projects/kimnata_batika.jpg'>
           </div>
           <div class="description">
             <h2>DADDY’S ROOM / КІМНАТА БАТІКА</h2>
