New DOM For mobile movie template

--- a/movie_template.html
+++ b/movie_template.html
@@ -84,6 +84,38 @@
         </div>
       </div>
 
+      <div class="mobile-movie-wrapper">
+
+          <div class="movie-title-and-subtitle">
+            <h2>SEA-OCEAN / МОРЕ-ОКЕАН</h2>
+            <h3>2020 / Ukraine / feature / drama</h3>
+          </div>
+
+          <div class="poster-wrapper">
+            <img src='assets/projects/more_ocean.jpg'>
+          </div>
+
+          <div class="movie-description">
+            <p>Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising. Since 2007 the company is working in the field of independent film production and theatrical distribution of feature, documentary and short films.</p>
+          </div>
+          
+          <div class="details">
+            <p><strong>Director: </strong>Full Name</p>
+            <p><strong>Screenplay: </strong>Full Name</p>
+            <p><strong>Director of photography: </strong>Full Name</p>
+            <p><strong>Music: </strong> Full Name</p>
+            <p><strong>Lead Actors: </strong>Full Name, Full Name, Full Name, Full Name, Full Name, Full Name</p>
+            <p><strong>Production Design: </strong>Full Name</p>
+            <p><strong>Producer: </strong>Full Name</p>
+            <p><strong>Co-Producer: </strong>Full Name</p>
+            <p><strong>Supported By: </strong>Company Name, Company Name</p>
+            <p><strong>World Sales: </strong>100 000 000$</p>
+            <p><strong>Awards: </strong> Award Name, Award Name</p>
+            <p><strong>Release Date: </strong>March 2019s</p>
+          </div>
+          <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/36334134' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+      </div>
+
       <div id="footer">
         PREMIER-MEDIA ©2007-2019 All rights reserved.
       </div>
