Updated poster size, added few metatags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
-    <title>PREMIER-MEDIA</title>
+    <title>PREMIER-MEDIA - Film company was founded in 1998 and specialized on advertising.</title>
+    <meta name="description" content="Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising.">
+    <meta name="keywords" content="film, movie, premier-media, advertising, distribution, indie, arthouse">
   </head>
 
   <body>
