Added OpenGraph tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <title>PREMIER-MEDIA - Film company was founded in 1998 and specialized on advertising.</title>
     <meta name="description" content="Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising.">
     <meta name="keywords" content="film, movie, premier-media, advertising, distribution, indie, arthouse">
+
+    <!-- OpenGraph tags -->
+    <meta property="og:title" content="PREMIER-MEDIA - Film company was founded in 1998 and specialized on advertising.">
+    <meta property="og:site_name" content="PREMIER-MEDIA">
+    <meta property="og:url" content="https://premiermediafilms.com/">
+    <meta property="og:description" content="Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://premiermediafilms.com/assets/logo.png">
+    <meta property="og:image" content="https://premiermediafilms.com/assets/mixed.jpg">
+
   </head>
 
   <body>
