--- a/index.html
+++ b/index.html
@@ -313,5 +313,22 @@
       <div id="footer">
         PREMIER-MEDIA ©2007-2019 All rights reserved.
       </div>
+
+      <script type="text/javascript">
+        var sideNav = document.getElementById("slide-out"),
+            sideNavVisible = true;
+
+        var menuButton = document.getElementById("menu")
+
+        function toggleSideNav() {
+          menuButton.classList.toggle('open');
+          if (sideNavVisible) {
+            sideNav.style.cssText = "transform: translateX(0); -webkit-transition: 0.5s;";
+          } else {
+            sideNav.style.cssText = "transform: translateX(-100%); -webkit-transition: 0.5s;";
+          }
+          sideNavVisible = !sideNavVisible;
+        }
+      </script>
   </body>
 <html>
