Added FB Link, Updated metatags

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
-    <title>PREMIER-MEDIA - Film company was founded in 1998 and specialized on advertising.</title>
-    <meta name="description" content="Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising.">
-    <meta name="keywords" content="film, movie, premier-media, advertising, distribution, indie, arthouse">
+    <title>PREMIER-MEDIA - The film production and distribution company. Produces feature movies, documentaries and short films.</title>
+    <meta name="description" content="The film production and distribution company. Produces feature movies, documentaries and short films.">
+    <meta name="keywords" content="прем'єр-медіа, українське кіно, продюсер, фільм, продакшн, film, movie, premier-media, produce, distribution, ukrainian production, indie, arthouse">
 
     <!-- OpenGraph tags -->
-    <meta property="og:title" content="PREMIER-MEDIA - Film company was founded in 1998 and specialized on advertising.">
+    <meta property="og:title" content="PREMIER-MEDIA - The film production and distribution company. Produces feature movies, documentaries and short films.">
     <meta property="og:site_name" content="PREMIER-MEDIA">
     <meta property="og:url" content="https://premiermediafilms.com/">
-    <meta property="og:description" content="Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising.">
+    <meta property="og:description" content="The film production and distribution company. Produces feature movies, documentaries and short films.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://premiermediafilms.com/assets/logo.png">
     <meta property="og:image" content="https://premiermediafilms.com/assets/mixed.jpg">
@@ -298,7 +298,7 @@
         <img src="assets/logo.png" class="contacts-logo">
         <p class="addrees">Ukraine, 01001, Kyiv, Grushevsky str. 28/2 office 43</p>
         <div class="social-networks">
-          <a href="#">
+          <a href="https://www.facebook.com/premiermediafilms/" target="_blank">
             <img src="assets/icons/facebook.svg">
           </a>
           <a href="#">
