Added pages for two movies

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
       <div id="projects">
         <div class="film-card">
           <div class="poster-wrapper">
-            <img src='assets/projects/spustoshennya.jpg'>
+          <a href="movies/desolation.html"> <img src='assets/projects/spustoshennya.jpg'> </a>
           </div>
           <div class="description">
-            <h2>DESOLATION / СПУСТОШЕННЯ</h2>
+            <a href="movies/desolation.html"> <h2>DESOLATION / СПУСТОШЕННЯ</h2> </a>
             <p>
               <strong>Director:</strong>
               Anna Buryachkova
@@ -99,10 +99,10 @@
 
         <div class="film-card">
           <div class="poster-wrapper">
-            <img src='assets/projects/kimnata_batika.jpg'>
+          <a href="movies/daddys_room.html">  <img src='assets/projects/kimnata_batika.jpg'></a>
           </div>
           <div class="description">
-            <h2>DADDY’S ROOM / КІМНАТА БАТІКА</h2>
+            <a href="movies/daddys_room.html"> <h2>DADDY’S ROOM / КІМНАТА БАТІКА</h2> </a>
             <p>
               <strong>Director:</strong>
               Maria Khalpakhchi
