--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img src="assets/logo.png" class="image-logo">
         </a>
         <a href="https://premiermediafilms.com/" id="logo">PREMIER-MEDIA</a>
-
+<!-- Пункт 2: меню -->
         <ul class="desktop-menu">
           <li><a href="#projects-start">Projects</a></li>
           <li><a href="#produced-start">Produced</a></li>
@@ -38,6 +38,7 @@
           <li><a href="#team-start">Team</a></li>
           <li><a href="#contacts-start">Contacts</a></li>
         </ul>
+      <!-- Пункт 2: меню -->
 
         <div id='slide-out'>
           <ul>
@@ -68,9 +69,11 @@
       </div>
 
       <div id="projects-start"></div>
-      <h1 class="section-title">Projects</h1>
+      <!-- Пункт 2: меню  -->
+  <h1 class="section-title">Projects</h1>
       <hr>
       <div id="projects">
+        <!-- Раздел Projects: начало блока-->
         <div class="film-card">
           <div class="poster-wrapper">
           <a href="movies/desolation.html"> <img src='assets/projects/spustoshennya.jpg'> </a>
@@ -152,9 +155,12 @@
           </div>
         </div>
       </div>
+      <!-- Раздел Projects: конец блока-->
+
 
       <div id="produced-start"></div>
-      <h1 class="section-title">Produced</h1>
+      <!-- Пункт 2: меню -->
+  <h1 class="section-title">Produced</h1>
       <hr>
       <div id="produced">
         <div class="film-card">
@@ -199,7 +205,8 @@
       </div>
 
       <div id="distribution-start"></div>
-      <h1 class="section-title">Distribution</h1>
+      <!-- Пункт 2: меню -->
+  <h1 class="section-title">Distribution</h1>
       <hr>
       <p id="distribution-description">We have released more than 100 films, both wide-release indie and arthouse movies. Selected titles:</p>
       <div id="distribution">
@@ -247,7 +254,8 @@
       </div>
 
       <div id="about-start"></div>
-      <h1 class="section-title" >About us</h1>
+      <!-- Пункт 2: меню -->
+  <h1 class="section-title" >About us</h1>
       <hr>
       <div id="about">
         <p>Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising.</p>
@@ -255,7 +263,8 @@
       </div>
 
       <div id="team-start"></div>
-      <h1 class="section-title">Team</h1>
+      <!-- Пункт 2: меню -->
+  <h1 class="section-title">Team</h1>
       <hr>
       <div id="team">
         <div class="member">
@@ -292,7 +301,8 @@
       </div>
 
       <div id="contacts-start"></div>
-      <h1 class="section-title">Contacts</h1>
+      <!-- Пункт 2: меню -->
+  <h1 class="section-title">Contacts</h1>
       <hr>
       <div id="contacts">
         <img src="assets/logo.png" class="contacts-logo">
