--- a/movies/desolation.html
+++ b/movies/desolation.html
@@ -60,7 +60,7 @@
             <!-- <p><strong>Production Design: </strong>Full Name</p> -->
             <p><strong>Producer: </strong>Ruslan Tovkun / Руслан Товкун</p>
             <p><strong>Co-Producer: </strong>Jane Yatsuta / Женя Яцута</p>
-            <p><strong>Co-Production: </strong>Radiaktive Film</p>
+            <p><strong>Co-Production: </strong>Radioaktive Film</p>
             <!-- <p><strong>Supported By: </strong>Company Name, Company Name</p> -->
             <!-- <p><strong>World Sales: </strong>100 000 000$</p> -->
             <!-- <p><strong>Awards: </strong> Award Name, Award Name</p> -->
@@ -130,7 +130,7 @@
             <!-- <p><strong>Production Design: </strong>Full Name</p> -->
             <p><strong>Producer: </strong>Ruslan Tovkun / Руслан Товкун</p>
             <p><strong>Co-Producer: </strong>Jane Yatsuta / Женя Яцута</p>
-            <p><strong>Co-Production: </strong>Radiaktive Film</p>
+            <p><strong>Co-Production: </strong>Radioaktive Film</p>
             <!-- <p><strong>Supported By: </strong>Company Name, Company Name</p> -->
             <!-- <p><strong>World Sales: </strong>100 000 000$</p> -->
             <!-- <p><strong>Awards: </strong> Award Name, Award Name</p> -->
