Cleanup images and added some comments

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
       <!-- Пункт 2: меню -->
   <h1 class="section-title">Produced</h1>
       <hr>
+      <!-- Раздел Produced: начало блока-->
       <div id="produced">
         <div class="film-card">
           <div class="poster-wrapper">
@@ -203,11 +204,14 @@
           </div>
         </div>
       </div>
+      <!-- Раздел Produced: конец блока-->
+
 
       <div id="distribution-start"></div>
       <!-- Пункт 2: меню -->
   <h1 class="section-title">Distribution</h1>
       <hr>
+        <!-- Раздел Distribution: начало блока-->
       <p id="distribution-description">We have released more than 100 films, both wide-release indie and arthouse movies. Selected titles:</p>
       <div id="distribution">
         <div class="film-card">
@@ -252,21 +256,27 @@
         </div>
 
       </div>
+      <!-- Раздел Distribution: конец блока-->
+
 
       <div id="about-start"></div>
       <!-- Пункт 2: меню -->
   <h1 class="section-title" >About us</h1>
       <hr>
       <div id="about">
+        <!-- Раздел About us: начало блока-->
         <p>Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising.</p>
         <p>Since 2007 the company is working in the field of independent film production and theatrical distribution of feature, documentary and short films.</p>
       </div>
+      <!-- Раздел About us: конец блока-->
 
       <div id="team-start"></div>
       <!-- Пункт 2: меню -->
   <h1 class="section-title">Team</h1>
       <hr>
       <div id="team">
+        <!-- Раздел Team: начало блока-->
+
         <div class="member">
           <div class="info">
             <span class="name">Ruslan Tovkun</span>
@@ -299,12 +309,15 @@
           </div>
         </div>
       </div>
+      <!-- Раздел Team: конец блока-->
 
       <div id="contacts-start"></div>
       <!-- Пункт 2: меню -->
   <h1 class="section-title">Contacts</h1>
       <hr>
       <div id="contacts">
+        <!-- Раздел Contacts: начало блока-->
+
         <img src="assets/logo.png" class="contacts-logo">
         <p class="addrees">Ukraine, 01001, Kyiv, Grushevsky str. 28/2 office 43</p>
         <div class="social-networks">
@@ -319,10 +332,13 @@
           </a>
         </div>
       </div>
+      <!-- Раздел Contacts: конец блока-->
+      <!-- Раздел Footer: начало блока-->
 
       <div id="footer">
         PREMIER-MEDIA ©2007-2019 All rights reserved.
       </div>
+      <!-- Раздел Footer: конец блока-->
 
       <script type="text/javascript">
         var sideNav = document.getElementById("slide-out"),
