--- a/movie_template.html
+++ b/movie_template.html
@@ -73,14 +73,17 @@
             <p>Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising. Since 2007 the company is working in the field of independent film production and theatrical distribution of feature, documentary and short films.</p>
 
           </div>
-          <!-- <div class="videos"> -->
-            <!--  Change URL For YouTube-->
-            <!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/jzk-lmU4KZ4' frameborder='0' allowfullscreen></iframe></div> -->
-          <!-- </div> -->
           <div class="videos">
-            <!--  Change URL For Vimeo-->
             <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/36334134' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
           </div>
+
+          <!-- <div class="videos">
+            <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src=' YOUTUBE URL HERE ' frameborder='0' allowfullscreen></iframe></div>
+          </div> -->
+
+          <!-- <div class="videos">
+            <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src=' VIMEO URL HERE ' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+          </div> -->
         </div>
       </div>
 
@@ -98,7 +101,7 @@
           <div class="movie-description">
             <p>Film company PREMIER-MEDIA was founded in 1998 and specialized on advertising. Since 2007 the company is working in the field of independent film production and theatrical distribution of feature, documentary and short films.</p>
           </div>
-          
+
           <div class="details">
             <p><strong>Director: </strong>Full Name</p>
             <p><strong>Screenplay: </strong>Full Name</p>
@@ -114,6 +117,9 @@
             <p><strong>Release Date: </strong>March 2019s</p>
           </div>
           <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/36334134' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+          <!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src=' YOUTUBE URL HERE ' frameborder='0' allowfullscreen></iframe></div> -->
+          <!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src=' VIMEO URL HERE ' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div> -->
+
       </div>
 
       <div id="footer">
